<resources>
    <string name="app_name">UC Santa Cruz Dining</string>
    <string name="search_hint">Search food</string>
    <string name="search_title">ayy</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_sort">Sort</string>

    <!--Sort-->
    <string name="action_sort_bydining">By Dining Hall</string>
    <string name="action_sort_bymeal">By Meal</string>
    <string name="action_sort_byfavorites">Favorites</string>

    <string name="section_format">Hello World from section: %1$d</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="one">one</string>
    <string name="two">two</string>
    <string name="title_activity_display_menu_item_detail">DisplayMenuItemDetail</string>
</resources>
