<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.cs121.finalproject.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_sort"
        android:orderInCategory="100"
        android:title="@string/action_sort"
        android:icon="@drawable/ic_sort_24dp"
        app:showAsAction="ifRoom" >
        <menu>
            <item
                android:id="@+id/action_sort_bydining"
                android:title="@string/action_sort_bydining" />
            <item
                android:id="@+id/action_sort_bymeal"
                android:title="@string/action_sort_bymeal" />
        </menu>
    </item>
</menu>
